# remark

./: CMakeLists.txt  main.cpp
EasyUse/: hello.bash
Emitter/: Emitter.cpp  Emitter.h
Examples/: test1.rk  test2.rk  test3.rk
Examples/Remark0.1/: test1.rk  test4.rk  test5.rk
Examples/Remark0.2/: test1.rk
Lexer/: KeywordIdentifier.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenType.h
Parser/: Parser.cpp  Parser.h
resources/: Grammarules.txt  keyword_ident.txt
